tests/integration/snapshots/build/build_cmd_project_config_edge_tests/build_reports_parse_error_for_dependency_object_with_unknown_kind.stderr.txt
Error: TOML parse error at line 6, column 2
  |
6 | [contracts.child]
  |  ^^^^^^^^^
data did not match any variant of untagged enum ContractDependency

